# hello-copilot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py
tests/: test_app.py
